Incorrect error handling in Metaspace::allocate

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • hs25
    • Affects Version/s: hs25
    • Component/s: hotspot
    • gc
    • b56

        When an allocation has failed and we call report_metadata_oome
        we should be calling it with CHECK_NULL.
        The current code just passes THREAD an a comment claims that the next line is unreachable.

        I = M (incorrect error handling)
        L = M (only happens on failed allocations)
        W = M (avoid allocation failures)

              Assignee:
              Mikael Gerdin (Inactive)
              Reporter:
              Mikael Gerdin (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: