8026698: Incorrect error handling in Metaspace::allocate

Reviewed-by: stefank, jwilhelm